// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RedirectTable creating a redirect allows adding a new redirect 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          redirects.code
        </th>
        <th>
          redirects.target
        </th>
        <th>
          redirects.active
        </th>
        <th>
          <button
            aria-label="create"
            class="border-0 align-self-center undefined btn btn-outline-success btn-sm"
            data-testid="btn_create"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-plus"
              data-icon="plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-label="new"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <input
              aria-label="redirects.code"
              class="form-control"
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control"
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          <div
            class="form-check form-switch"
          >
            <input
              aria-label="redirects.active"
              class="form-check-input"
              name="active"
              type="checkbox"
            />
            <label
              class="form-check-label"
              title=""
            >
              redirects.activeLabel.true
            </label>
          </div>
        </td>
        <td
          class="col-1"
        >
          <form
            autocomplete="off"
            id="form_redirect_new"
            novalidate=""
          >
            <button
              aria-label="common.actions.cancel"
              class="border-0 align-self-center border-0 btn btn-outline-danger"
              data-testid="btn_cancel"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-x"
                data-icon="x"
                data-prefix="fas"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              aria-label="common.actions.create"
              class="border-0 align-self-center border-0 btn btn-outline-success"
              data-testid="btn_save"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-check"
                data-icon="check"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </form>
        </td>
      </tr>
      <tr
        aria-label="test1"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <button
              aria-label="redirects.sourceUrl"
              class="border-0 align-self-center border-0 me-2 btn btn-outline-secondary btn-sm"
              data-testid="btn_copy"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-copy"
                data-icon="copy"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <input
              aria-label="redirects.code"
              class="form-control-plaintext"
              disabled=""
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control-plaintext"
            disabled=""
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          redirects.activeLabel.true
        </td>
        <td
          class="col-1"
        >
          <button
            aria-label="edit"
            class="border-0 align-self-center undefined btn btn-outline-primary btn-sm"
            data-testid="btn_edit"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square"
              data-icon="pen-to-square"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            aria-label="delete"
            class="border-0 align-self-center undefined btn btn-outline-danger btn-sm"
            data-testid="btn_delete"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash"
              data-icon="trash"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                fill="currentColor"
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr
        aria-label="test2"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <button
              aria-label="redirects.sourceUrl"
              class="border-0 align-self-center border-0 me-2 btn btn-outline-secondary btn-sm"
              data-testid="btn_copy"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-copy"
                data-icon="copy"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <input
              aria-label="redirects.code"
              class="form-control-plaintext"
              disabled=""
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control-plaintext"
            disabled=""
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          redirects.activeLabel.false
        </td>
        <td
          class="col-1"
        >
          <button
            aria-label="edit"
            class="border-0 align-self-center undefined btn btn-outline-primary btn-sm"
            data-testid="btn_edit"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square"
              data-icon="pen-to-square"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            aria-label="delete"
            class="border-0 align-self-center undefined btn btn-outline-danger btn-sm"
            data-testid="btn_delete"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash"
              data-icon="trash"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                fill="currentColor"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`RedirectTable editing a redirect allows editing a redirect row 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          redirects.code
        </th>
        <th>
          redirects.target
        </th>
        <th>
          redirects.active
        </th>
        <th>
          <button
            aria-label="create"
            class="border-0 align-self-center undefined btn btn-outline-success btn-sm"
            data-testid="btn_create"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-plus"
              data-icon="plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-label="test1"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <input
              aria-label="redirects.code"
              class="form-control"
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control"
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          <div
            class="form-check form-switch"
          >
            <input
              aria-label="redirects.active"
              class="form-check-input"
              name="active"
              type="checkbox"
            />
            <label
              class="form-check-label"
              title=""
            >
              redirects.activeLabel.true
            </label>
          </div>
        </td>
        <td
          class="col-1"
        >
          <form
            autocomplete="off"
            id="form_redirect_1"
            novalidate=""
          >
            <button
              aria-label="common.actions.cancel"
              class="border-0 align-self-center border-0 btn btn-outline-danger"
              data-testid="btn_cancel"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-x"
                data-icon="x"
                data-prefix="fas"
                role="img"
                viewBox="0 0 384 512"
              >
                <path
                  d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              aria-label="common.actions.save"
              class="border-0 align-self-center border-0 btn btn-outline-success"
              data-testid="btn_save"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-check"
                data-icon="check"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </form>
        </td>
      </tr>
      <tr
        aria-label="test2"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <button
              aria-label="redirects.sourceUrl"
              class="border-0 align-self-center border-0 me-2 btn btn-outline-secondary btn-sm"
              data-testid="btn_copy"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-copy"
                data-icon="copy"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <input
              aria-label="redirects.code"
              class="form-control-plaintext"
              disabled=""
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control-plaintext"
            disabled=""
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          redirects.activeLabel.false
        </td>
        <td
          class="col-1"
        >
          <button
            aria-label="edit"
            class="border-0 align-self-center undefined btn btn-outline-primary btn-sm"
            data-testid="btn_edit"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square"
              data-icon="pen-to-square"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            aria-label="delete"
            class="border-0 align-self-center undefined btn btn-outline-danger btn-sm"
            data-testid="btn_delete"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash"
              data-icon="trash"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                fill="currentColor"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`RedirectTable renders the table with redirects 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          redirects.code
        </th>
        <th>
          redirects.target
        </th>
        <th>
          redirects.active
        </th>
        <th>
          <button
            aria-label="create"
            class="border-0 align-self-center undefined btn btn-outline-success btn-sm"
            data-testid="btn_create"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-plus"
              data-icon="plus"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-label="test1"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <button
              aria-label="redirects.sourceUrl"
              class="border-0 align-self-center border-0 me-2 btn btn-outline-secondary btn-sm"
              data-testid="btn_copy"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-copy"
                data-icon="copy"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <input
              aria-label="redirects.code"
              class="form-control-plaintext"
              disabled=""
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control-plaintext"
            disabled=""
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          redirects.activeLabel.true
        </td>
        <td
          class="col-1"
        >
          <button
            aria-label="edit"
            class="border-0 align-self-center undefined btn btn-outline-primary btn-sm"
            data-testid="btn_edit"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square"
              data-icon="pen-to-square"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            aria-label="delete"
            class="border-0 align-self-center undefined btn btn-outline-danger btn-sm"
            data-testid="btn_delete"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash"
              data-icon="trash"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                fill="currentColor"
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr
        aria-label="test2"
      >
        <td
          class="col-2"
        >
          <div
            class=" d-flex flex-row"
          >
            <button
              aria-label="redirects.sourceUrl"
              class="border-0 align-self-center border-0 me-2 btn btn-outline-secondary btn-sm"
              data-testid="btn_copy"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-copy"
                data-icon="copy"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <input
              aria-label="redirects.code"
              class="form-control-plaintext"
              disabled=""
              name="code"
            />
          </div>
        </td>
        <td
          class="col-6"
        >
          <input
            aria-label="redirects.target"
            class="form-control-plaintext"
            disabled=""
            name="target"
            placeholder="redirects.targetPlaceholder"
            type="url"
          />
        </td>
        <td>
          redirects.activeLabel.false
        </td>
        <td
          class="col-1"
        >
          <button
            aria-label="edit"
            class="border-0 align-self-center undefined btn btn-outline-primary btn-sm"
            data-testid="btn_edit"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-pen-to-square"
              data-icon="pen-to-square"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            aria-label="delete"
            class="border-0 align-self-center undefined btn btn-outline-danger btn-sm"
            data-testid="btn_delete"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash"
              data-icon="trash"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                fill="currentColor"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
